<resources>
    <string name="app_name">Mixto Track</string>
    <string name="institution_name">Colegio Mixto La Molina</string>
    <string name="school_motto">Excelencia y Compromiso</string>
    <string name="logo_desc">Logo del Colegio Mixto La Molina</string>

    <string name="username_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="select_role">Tipo de Usuario</string>
    <string name="role_student">Alumno</string>
    <string name="role_teacher">Docente</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="help_support">¿Necesitas ayuda? Contacta a soporte</string>
    <string name="_17">17</string>
    <string name="aprobado">Aprobado</string>
    <string name="bimestre_1">Bimestre 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>